2000-03-25  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tags.h (SCM_POINTERS_MUNGED):  Removed.

	* gc.c (scm_gc_sweep, init_heap_seg):  Removed use of
	SCM_POINTERS_MUNGED, thus fixing some illegal casts to SCM.

2000-03-24  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* pairs.h (SCM_CELL_OBJECT, SCM_CELL_OBJECT_[0-3],
	SCM_SET_CELL_OBJECT, SCM_SET_CELL_OBJECT_[0-3], SCM_CELL_TYPE,
	SCM_SET_CELL_TYPE):  Added a set of low level macros for accessing
	cell entries.
	(SCM_CELL_WORD_[0-3]): Renamed from the SCM_CELL_WORD[0-3].

	* procs.h, procs.c:  Instead of SCM_{SET_}?CELL_WORD[12], use the
	newly introduced SCM_{SET_}?CELL_OBJECT_[12] macros.

2000-03-23  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* tags.h: Disabled definition of SCM_VOIDP_TEST.

	Defining SCM as void * introduces problems which haven't been
	handled yet.  Developers who work with these issues can enable it
	in their working copies.

	Disabling this definition exposes a set of newly introduced and
	older misuses of types which causes warning messages during
	compilation.  We'll fix this successively.

	* gc.c (scm_mark_locations): Changed * (SCM **) X --> * (SCM *) X
	in order to obtain a value of type SCM.
	(scm_cellp): Updated with new changes to scm_mark_locations.

	* continuations.h (SCM_SETJMPBUF): Cast second arg into SCM.

	* continuations.c (scm_make_cont): Removed cast of size_t into
	long.

	* symbols.h (SCM_SETCHARS): Cast second arg into SCM.

2000-03-22  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.h (SCM_SETNUMDIGS):  Use SCM_BIGSIZEFIELD macro for
	shifting, not constant.  Thanks to Dale P. Smith.

	* numbers.c (scm_sum, scm_difference):  Don't test a SCM value
	for being less than zero.  Decode it to a C value first.  Again,
	thank you Dale.

2000-03-22  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.h, ramap.c, struct.h, vectors.h:  Don't use SCM2PTR for
	non scheme values.  If raw data is stored in SCM variables, it has